--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&family=Exo&family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <title>Returns Calculator</title>
   </head>
   <body>
